# padc

./: LICENSE  README.md  example.ldif  init.sh  logging_settings.ini  main.py  publish.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
client/: __init__.py  state.py
msad/: __init__.py
padc/cli/: __main__.py  cli.py  users.py  users_utils.py
padc/client/: error_handler.py  state.py
padc/logger/: __init__.py  setup_log.py
padc/msad/: ad_error_handler.py  msad.py
src/: error_handler.py  main.py  test_msad.py
src/cli/: cli.py  users.py  users_utils.py
src/client/: client.py  state.py
src/log/: setup_log.py
src/msad/: __init__.py  ad_error_handler.py  error_handler.py  msad.py
src/tests/: test_msad.py
tests/: test_msad.py
