[tool.poetry]
name = "padc"
version = "1.0"
description = "python active directory cli using python-ldap lib"
authors = ["fabiokleis <fabiohkrc@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/padc/"
repository = "https://github.com/Fabiokleis/padc"
packages = [
    { include = "padc" }
]

[tool.poetry.scripts]
padc = 'padc.cli.__main__:main'

[tool.poetry.dependencies]
future = "0.18.3"
pyad = "0.6.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
python-dotenv = "0.21.1"
python-ldap = "3.4.3"
click = "8.1.3"
colorama = "0.4.6"
commonmark = "0.9.1"
Pygments = "2.14.0"
rich = "12.6.0"
shellingham = "1.5.0.post1"
typer = "0.7.0"
python= "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
